--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Pokemon pokedex!"
     />
+    <link rel="icon" type="image/x-icon" href="https://img.icons8.com/plasticine/100/undefined/open-pokeball.png">
 
     <title>Pokedex</title>
   </head>
